[package]
name = "idhashrs"
version = "0.2.0"
edition = "2018"
license = "GPL-2.0-or-later"
authors = [
    "Lissa Hyacinth <lissahyacinth@gmail.com>"
]
repository = "https://github.com/lissahyacinth/idhash-py"
description = "Calculate the Unique Numeric Fingerprint for Tabular Data"
readme = "README.md"

[lib]
name = "idhash"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
arrow = { package = "arrow2", version = "0.8.0", default-features = false, features = ["csv", "io_csv_read"] }
idhash = { version = "0.2.0" }

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]

